--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,9 @@
     <h1 id="title">Hi People</h1>
     <div id="menu">
         <ul>
-            <li><a href="#">Find</a></li>
-            <li><a href="#people">Show all</a></li>
-            <li><a href="#people/create">New person</a></li>
+            <li data-section="find" ><a href="#">Find</a></li>
+            <li data-section="people" ><a href="#people">Show all</a></li>
+            <li data-section="create" ><a href="#people/create">New person</a></li>
         </ul>
     </div>
     <div id="content"></div>
