--- a/public/templates/find.html
+++ b/public/templates/find.html
@@ -7,8 +7,7 @@
         <input type="checkbox" id="refresh"/>
         <label for="refresh">Force refresh form server (it takes longer).</label>
     </div>
-    <div class="form-footer">
-        <input type="reset" value="Reset"/>
+    <div class="search-footer">
         <input type="submit" value="Search"/>
     </div>
 </form>
