--- a/public/templates/person.html
+++ b/public/templates/person.html
@@ -13,7 +13,9 @@
         <label for="firstName">Firstname:</label>
         <input id="firstName" name="firstName" type="text" value="<%= firstName %>" data-input="firstName"/><br/>
         <label for="lastName">Lastname:</label>
-        <input id="lastName" name="lastName" type="text" value="<%= lastName %>" data-input="lastName"/>
+        <input id="lastName" name="lastName" type="text" value="<%= lastName %>" data-input="lastName"/><br/>
+        <label for="delete">Delete this person</label>
+        <input id="delete" type="checkbox"/>
     </div>
     <div class="form-footer">
         <input type="reset" value="Reset"/>
