--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,9 @@
             <li data-section="create" ><a href="#people/create">New person</a></li>
         </ul>
     </div>
-    <div id="content"></div>
+    <div class="page-container">
+        <div id="content"></div>
+    </div>
     <div id="footer">
         <div class="left">Nodium 2013</div>
         <div class="right">Your first request has been processed at <%= time %>.</div>
