Add people creation.

--- a/public/templates/person.html
+++ b/public/templates/person.html
@@ -3,6 +3,7 @@
         <li><span class="field-error" data-error-for="nickName"></span></li>
         <li><span class="field-error" data-error-for="firstName"></span></li>
         <li><span class="field-error" data-error-for="lastName"></span></li>
+        <li><span class="field-error" data-error-for="server"></span></li>
     </ul>
 </div>
 <form>
