--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
     <div id="menu">
         <ul>
             <li data-section="find" ><a href="#">Find</a></li>
-            <li data-section="people" ><a href="#people">Show all</a></li>
-            <li data-section="create" ><a href="#people/create">New person</a></li>
+            <li data-section="people" ><a href="#people">People</a></li>
+            <li data-section="create" ><a href="#create">Create</a></li>
         </ul>
     </div>
     <div class="page-container">
